--- a/Blazor.WebForm.Components/ContainerButton.razor
+++ b/Blazor.WebForm.Components/ContainerButton.razor
@@ -1,8 +1,8 @@
-﻿@using Blazor.WebForm.UI;
-@using Blazor.WebForm.UI.ControlComponents;
-@using System.Drawing;
-@using System.Web.UI;
-@using System.Web.UI.WebControls;
+﻿@using Blazor.WebForm.UI
+@using Blazor.WebForm.UI.ControlComponents
+@using System.Drawing
+@using System.Web.UI
+@using System.Web.UI.WebControls
 @inherits UserControlComponent<Extensions.Web.UI.WebControls.ContainerButton>
 @this.Render(this.Control)
 @code {
