--- a/Blazor.WebForm.Components/FileUpload.razor
+++ b/Blazor.WebForm.Components/FileUpload.razor
@@ -1,9 +1,9 @@
-﻿@using Blazor.WebForm.UI;
-@using Blazor.WebForm.UI.ControlComponents;
-@using System.IO;
-@using System.Web;
-@using System.Web.UI;
-@using System.Web.UI.WebControls;
+﻿@using Blazor.WebForm.UI
+@using Blazor.WebForm.UI.ControlComponents
+@using System.IO
+@using System.Web
+@using System.Web.UI
+@using System.Web.UI.WebControls
 @inherits WebControlComponent<System.Web.UI.WebControls.FileUpload>
 @this.Render(this.Control)
 @code {
