--- a/Blazor.WebForm.Components/FreeDataSource.razor
+++ b/Blazor.WebForm.Components/FreeDataSource.razor
@@ -1,8 +1,8 @@
-﻿@using Blazor.WebForm.UI;
-@using Blazor.WebForm.UI.ControlComponents;
-@using System.Collections;
-@using System.Web.UI;
-@using System.Web.UI.WebControls;
+﻿@using Blazor.WebForm.UI
+@using Blazor.WebForm.UI.ControlComponents
+@using System.Collections
+@using System.Web.UI
+@using System.Web.UI.WebControls
 @inherits UserControlComponent<Extensions.Web.UI.WebControls.FreeDataSource>
 @this.Render(this.Control)
 @code {
