--- a/Blazor.WebForm.Components/RequiredFieldValidator.razor
+++ b/Blazor.WebForm.Components/RequiredFieldValidator.razor
@@ -1,7 +1,7 @@
-﻿@using Blazor.WebForm.UI;
-@using Blazor.WebForm.UI.ControlComponents;
-@using System.Web.UI;
-@using System.Web.UI.WebControls;
+﻿@using Blazor.WebForm.UI
+@using Blazor.WebForm.UI.ControlComponents
+@using System.Web.UI
+@using System.Web.UI.WebControls
 @inherits BaseValidatorControlComponent<System.Web.UI.WebControls.RequiredFieldValidator>
 @this.RenderWithInner(this.Control)
 @code {
