--- a/Blazor.WebForm.Components/DataPager.razor
+++ b/Blazor.WebForm.Components/DataPager.razor
@@ -1,7 +1,7 @@
-﻿@using Blazor.WebForm.UI;
-@using Blazor.WebForm.UI.ControlComponents;
-@using System.Web.UI;
-@using System.Web.UI.WebControls;
+﻿@using Blazor.WebForm.UI
+@using Blazor.WebForm.UI.ControlComponents
+@using System.Web.UI
+@using System.Web.UI.WebControls
 @inherits ControlComponentBase<System.Web.UI.WebControls.DataPager>
 @this.RenderWithCascading(this.Control, this.Fields, this.ChildLevel)
 @code {
