--- a/Blazor.WebForm.Components/ImageMap.razor
+++ b/Blazor.WebForm.Components/ImageMap.razor
@@ -1,7 +1,7 @@
-﻿@using Blazor.WebForm.UI;
-@using Blazor.WebForm.UI.ControlComponents;
-@using System.Web.UI;
-@using System.Web.UI.WebControls;
+﻿@using Blazor.WebForm.UI
+@using Blazor.WebForm.UI.ControlComponents
+@using System.Web.UI
+@using System.Web.UI.WebControls
 @inherits ImageWebControlComponent<System.Web.UI.WebControls.ImageMap>
 @this.RenderWithCascading(this.Control, this.ChildContent)
 @code {
