--- a/Blazor.WebForm.Components/Table.razor
+++ b/Blazor.WebForm.Components/Table.razor
@@ -1,7 +1,7 @@
-﻿@using Blazor.WebForm.UI;
-@using Blazor.WebForm.UI.ControlComponents;
-@using System.Web.UI;
-@using System.Web.UI.WebControls;
+﻿@using Blazor.WebForm.UI
+@using Blazor.WebForm.UI.ControlComponents
+@using System.Web.UI
+@using System.Web.UI.WebControls
 @inherits WebControlComponent<System.Web.UI.WebControls.Table>
 @this.RenderWithCascading(this.Control, this.ChildContent, this.ChildLevel)
 @code {
