--- a/Blazor.WebForm.Components/Wizard.razor
+++ b/Blazor.WebForm.Components/Wizard.razor
@@ -1,8 +1,8 @@
-﻿@using Blazor.WebForm.UI;
-@using Blazor.WebForm.UI.ControlComponents;
-@*@using System.Collections;*@
-@using System.Web.UI;
-@using System.Web.UI.WebControls;
+﻿@using Blazor.WebForm.UI
+@using Blazor.WebForm.UI.ControlComponents
+@*@using System.Collections*@
+@using System.Web.UI
+@using System.Web.UI.WebControls
 @inherits WebControlComponent<System.Web.UI.WebControls.Wizard>
 @this.RenderWithCascading(this.Control, this.ChildContent, this.ChildLevel)
 @code {
