--- a/Blazor.WebForm.Components/MultiView.razor
+++ b/Blazor.WebForm.Components/MultiView.razor
@@ -3,10 +3,13 @@
 @using System.Web.UI
 @using System.Web.UI.WebControls
 @inherits ControlComponentBase<System.Web.UI.WebControls.MultiView>
-@this.RenderWithCascading(this.Control, this.ChildContent)
+@this.RenderWithCascading(this.Control, this.ChildContent, this.ChildLevel)
 @code {
     [Parameter]
     public RenderFragment ChildContent { get; set; }
+
+    [Parameter]
+    public int ChildLevel { get; set; } = 1;
 
     [Parameter]
     public int ActiveViewIndex
