--- a/Blazor.WebForm.Components/CheckBox.razor
+++ b/Blazor.WebForm.Components/CheckBox.razor
@@ -130,11 +130,10 @@
         this.InvokePropertyBindEvent(nameof(this.Checked), this.Checked);
     }
 
-    protected override void SetInnerPropertyWithInner(IReadOnlyDictionary<string, object> parameters, ref bool hasInnerContent)
+    protected override void SetInnerPropertyWithInner(IReadOnlyDictionary<string, object> parameters)
     {
         if (parameters.ContainsKey(nameof(this.ChildContent)) && this.ChildContent != null)
         {
-            hasInnerContent = true;
             this.Text = RenderUtility.GetContentString(this.ChildContent);
         }
     }
