--- a/Blazor.WebForm.Components/HyperLink.razor
+++ b/Blazor.WebForm.Components/HyperLink.razor
@@ -86,11 +86,10 @@
         }
     }
 
-    protected override void SetInnerPropertyWithInner(IReadOnlyDictionary<string, object> parameters, ref bool hasInnerContent)
+    protected override void SetInnerPropertyWithInner(IReadOnlyDictionary<string, object> parameters)
     {
         if (parameters.ContainsKey(nameof(this.ChildContent)) && this.ChildContent != null)
         {
-            hasInnerContent = true;
             this.Text = RenderUtility.GetContentString(this.ChildContent);
         }
     }
