--- a/Blazor.WebForm.Components/Button.razor
+++ b/Blazor.WebForm.Components/Button.razor
@@ -153,11 +153,10 @@
         _command.Invoke(sender, e);
     }
 
-    protected override void SetInnerPropertyWithInner(IReadOnlyDictionary<string, object> parameters, ref bool hasInnerContent)
+    protected override void SetInnerPropertyWithInner(IReadOnlyDictionary<string, object> parameters)
     {
         if (parameters.ContainsKey(nameof(this.ChildContent)) && this.ChildContent != null)
         {
-            hasInnerContent = true;
             this.Text = RenderUtility.GetContentString(this.ChildContent);
         }
     }
