--- a/Blazor.WebForm.Components/TextBox.razor
+++ b/Blazor.WebForm.Components/TextBox.razor
@@ -168,6 +168,10 @@
         {
             this.Control.AutoPostBack = true;
             this.Control.TextChanged += this.BindTextChanged;
+            if (this.HasEventProperty(nameof(this.OnTextChanged)))
+            {
+                this.SetBindEventProperty(nameof(this.OnTextChanged), this.BindTextChanged);
+            }
         }
     }
 
