--- a/Blazor.WebForm.Components/ComboBox.razor
+++ b/Blazor.WebForm.Components/ComboBox.razor
@@ -66,11 +66,7 @@
         if (this.HasPropertyBindEvent<string>(nameof(this.Text)))
         {
             this.Control.AutoPostBack = true;
-            this.Control.TextChanged += this.BindTextChanged;
-            if (this.HasEventProperty(nameof(this.OnTextChanged)))
-            {
-                this.SetBindEventProperty(nameof(this.OnTextChanged), this.BindTextChanged);
-            }
+            this.SetBindEventProperty(nameof(this.OnTextChanged), this.BindTextChanged, i => this.Control.TextChanged += i, i => this.Control.TextChanged -= i);
         }
     }
 
