--- a/Blazor.WebForm.Components/RichTextBox.razor
+++ b/Blazor.WebForm.Components/RichTextBox.razor
@@ -98,7 +98,7 @@
 
     private void BindInnerHtmlChanged(object sender, EventArgs e)
     {
-        this.InvokePropertyBindEvent(nameof(this.InnerHtml), this.InnerHtml);
+        this.InvokePropertyBindEvent(nameof(this.OnTextChanged), sender, e, nameof(this.InnerHtml), this.InnerHtml);
     }
 
     protected override void SetInnerPropertyWithInner(IReadOnlyDictionary<string, object> parameters)
