--- a/Blazor.WebForm.Components/RadioButton.razor
+++ b/Blazor.WebForm.Components/RadioButton.razor
@@ -160,7 +160,7 @@
     {
         if (parameters.ContainsKey(nameof(this.ChildContent)) && this.ChildContent != null)
         {
-            this.Text = RenderUtility.GetContentString(this.ChildContent);
+            RenderUtility.SetContentString(this.Control, this.ChildContent);
         }
     }
 }
