--- a/Blazor.WebForm.Components/LinkButton.razor
+++ b/Blazor.WebForm.Components/LinkButton.razor
@@ -144,7 +144,7 @@
     {
         if (parameters.ContainsKey(nameof(this.ChildContent)) && this.ChildContent != null)
         {
-            this.Text = RenderUtility.GetContentString(this.ChildContent);
+            RenderUtility.SetContentString(this.Control, this.ChildContent);
         }
     }
 }
