--- a/Blazor.WebForm.Components/Wizard.razor
+++ b/Blazor.WebForm.Components/Wizard.razor
@@ -381,6 +381,19 @@
     }
 
     [Parameter]
+    public WizardSideBarPosition SideBarPosition
+    {
+        get
+        {
+            return this.Control.SideBarPosition;
+        }
+        set
+        {
+            this.Control.SideBarPosition = value;
+        }
+    }
+
+    [Parameter]
     public WizardNavigationEventHandler OnFinishButtonClick
     {
         get
